--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -50,3 +51,28 @@ header nav a li:hover{
     color: rgb(0, 0, 0);
     transition: 2s;
 }
+
+.maindiv1 {
+display: flex;
+
+}
+.maindiv1 img{
+    margin: 20px;
+    width: 600px;
+    height: 580px;
+    border: 5px solid rgb(0, 0, 0);
+    border-radius: 70px;
+    box-shadow: 0px  10px 50px black;
+}
+
+main h1{
+    text-align: center;
+    padding: 40px 0px;
+    text-transform: uppercase;
+}
+
+.cont1 {
+    text-align: justify; 
+    padding: 0px 70px 15px 25px;
+}
+
