--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: linear-gradient(80deg, rgb(230, 156, 168), rgb(240, 219, 235));
+    background-image: linear-gradient(80deg, rgb(243, 174, 185), rgb(240, 219, 235));
 }
 
 header {
@@ -19,13 +19,13 @@ header {
 }
 
 header img{
-    width: 170px;
-    height: 210px;
-    border: 5px solid rgb(235, 172, 224);
+    width: 180px;
+    height: 220px;
+    border: 5px solid rgb(243, 208, 237);
     border-radius: 200px;
 }
 header img:hover{  /* o hover serve para alterar o estilo quando o mouse estiver em cima do elemento  */
-    width: 180px;
+    width: 199px;
     height: 220px;
     transition: 1s;
 }
@@ -82,6 +82,8 @@ main h1{
     color: rgb(0, 0, 0);
     border: 2px solid rgb(0, 0, 0);
     box-shadow: 0px  10px 50px black;
+    margin: 20px  70px  40px 20px;
+
 }
 
 .card-header {
@@ -90,4 +92,27 @@ main h1{
 
 .card-body {
     background-color: rgb(255, 237, 255);
+}
+
+footer {
+    background-color: rgb(0, 0, 0);
+    margin: 0px   0px;
+    display: flex;
+}
+
+footer ul li {
+    color:rgb(255, 255, 255);
+    text-transform: uppercase;
+    display: inline;
+    font-size: 14px;
+    padding: 80px;
+}
+footer img{
+    width: 40px;
+    height: 40px;
+}
+.icons-footer{
+    display: flex;
+    padding: 10px 70px 50px;
+    align-items: center;
 }
